--- a/.github/workflows/psalm-matrix.yml
+++ b/.github/workflows/psalm-matrix.yml
@@ -18,7 +18,7 @@ jobs:
       # do not stop on another job's failure
       fail-fast: false
       matrix:
-        ocp-version: [ 'dev-master', 'dev-stable28', 'dev-stable27', 'dev-stable26', 'dev-stable25', 'dev-stable24', 'dev-stable23' ]
+        ocp-version: [ 'dev-master', 'dev-stable29', 'dev-stable28', 'dev-stable27', 'dev-stable26', 'dev-stable25', 'dev-stable24', 'dev-stable23' ]
 
     name: static-psalm-analysis ${{ matrix.ocp-version }}
     steps:
