--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 	"license": "AGPLv3",
 	"require-dev": {
 		"nextcloud/coding-standard": "^1.0",
-		"vimeo/psalm": "^4.30"
+		"vimeo/psalm": "^4.30",
+		"nextcloud/ocp": "dev-stable29"
 	},
 	"config": {
 		"autoloader-suffix": "ShareImporter",
