--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,15 @@
 	"type": "project",
 	"license": "AGPLv3",
 	"require-dev": {
-		"nextcloud/coding-standard": "^1.0",
-		"vimeo/psalm": "^4.30",
-		"nextcloud/ocp": "dev-stable29"
+		"vimeo/psalm": "^5.13",
+		"nextcloud/ocp": "dev-stable29",
+		"nextcloud/coding-standard": "^1.3"
 	},
 	"config": {
 		"autoloader-suffix": "ShareImporter",
 		"optimize-autoloader": true,
 		"platform": {
-			"php": "8.0"
+			"php": "8.0.2"
 		}
 	},
 	"autoload": {
