--- a/composer.json
+++ b/composer.json
@@ -3,15 +3,18 @@
 	"type": "project",
 	"license": "AGPLv3",
 	"require-dev": {
-		"vimeo/psalm": "^5.13",
 		"nextcloud/ocp": "dev-stable29",
-		"nextcloud/coding-standard": "^1.3"
+		"nextcloud/coding-standard": "^1.3",
+		"bamarni/composer-bin-plugin": "^1.8"
 	},
 	"config": {
 		"autoloader-suffix": "ShareImporter",
 		"optimize-autoloader": true,
 		"platform": {
 			"php": "8.0.2"
+		},
+		"allow-plugins": {
+			"bamarni/composer-bin-plugin": true
 		}
 	},
 	"autoload": {
@@ -26,6 +29,19 @@
 		"psalm": "psalm",
 		"psalm:clear": "psalm --clear-cache && psalm --clear-global-cache",
 		"psalm:update-baseline": "psalm --update-baseline",
-		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType"
+		"psalm:fix": "psalm --alter --issues=InvalidReturnType,InvalidNullableReturnType,MissingParamType,InvalidFalsableReturnType",
+		"post-install-cmd": [
+			"[ $COMPOSER_DEV_MODE -eq 0 ] || composer bin all install --ansi"
+		],
+		"post-update-cmd": [
+			"[ $COMPOSER_DEV_MODE -eq 0 ] || composer bin all update --ansi"
+		]
+
+	},
+	"extra": {
+		"bamarni-bin": {
+			"bin-links": true,
+			"forward-command": true
+		}
 	}
 }
